<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.gallery.GalleryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Base.Theme.EcoSort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/action_bar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/gallery"
            app:titleMargin="4dp"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="@color/buttonNavBar"
            app:navigationIcon="?attr/homeAsUpIndicator" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/card"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/please_insert_image_first"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_trash" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageCardView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/galleryButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/take_from_gallery"
                    app:icon="@drawable/ic_photo"
                    app:iconTint="@color/forGallery"
                    android:textColor="@color/forGallery"
                    app:iconGravity="textStart" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cameraButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/take_a_picture"
                    app:icon="@drawable/ic_camera"
                    app:iconTint="@color/forGallery"
                    android:textColor="@color/forGallery"
                    app:iconGravity="textStart" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/analyzeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/analyze"
                android:textColor="@color/text_button_gallery"
                app:backgroundTint="@color/button"
                app:layout_constraintBottom_toTopOf="@+id/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>